# tech-challenger-soat10-phase3

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
config/: database.py  settings.py
config/init_db/: init_db.sh
config_k8s/: tech-challenger-src.yaml
migrations/: env.py
migrations/versions/: 073b2a3aab27_add_entities_order_status_and_order.py  08fedc9b9c00_initial_migration.py  0c8e51f99de6_add_entity_profile_permission.py  134c95b25c36_merge_6787f5df0f04_and_d930883ec3eb.py  147ab3eea2de_add_entity_user_profile.py  1ec56060d33c_add_relationship_order_orderitem.py  2ca84d2ec115_add_entity_user.py  342410eab0f3_add_entity_product.py  3d4e0798238b_add_entity_payment_status.py  3ea8f2d1c9b7_populate_payment_methods.py  40b73fea23ed_add_entity_employee.py  52506b356108_make_category_name_as_unique_field.py  5938cbf91924_fix_table_name_employees.py  59f5618569b5_add_entity_role.py  5b25745d24eb_add_entity_orderitem.py  6787f5df0f04_update_new_field_inactivated_at_from_.py  769261351233_add_entity_profile.py  7999a8f4533f_relationship_order_payment.py  7d2af62c0e7a_merge_5b25745d24eb_and_769261351233.py  7ec60bc425de_merge_entities_permission_and_category.py  898b4cf28b7e_add_entity_permission.py  960b06e32f16_add_entity_permission.py  97a5618569bf_populate_permissions_table.py  97b5618569bf_populate_profile_table.py  97d5618569bf_populate_category_table.py  (+31 more)
src/: app.py
tests/: conftest.py  test_category_repository.py  test_health_check.py
yaml/: svc-tech-challenger.yaml  tech-challenger-src.yaml
(+292 files in other folders)
