[tool.poetry]
name = "tech-challenger-soat10"
version = "0.1.0"
description = ""
authors = ["Carlos Roberto <carlosjr.if@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
injector = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
