[tool.poetry]
name = "tech-challenger-soat10"
version = "0.1.0"
description = ""
authors = [
    "Carlos Roberto <carlosjr.if@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
injector = "^0.22.0"
pytest = "^8.3.4"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"
load-dotenv = "^0.1.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
